[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/entities/player/PlayerProjectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/player/staff.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/fx/hits/hits-4/hits-4-6.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/player/varitek-sprites.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/fx/hits/hits-4/hits-4-4.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/fx/hits/hits-4/hits-4-7.png" type="Texture" id=6]
[ext_resource path="res://src/entities/player/Cannon.gd" type="Script" id=7]
[ext_resource path="res://assets/textures/fx/hits/hits-4/hits-4-2.png" type="Texture" id=8]
[ext_resource path="res://src/entities/player/states/WalkState.gd" type="Script" id=9]
[ext_resource path="res://src/entities/player/ValkyrieStateMachine.gd" type="Script" id=10]
[ext_resource path="res://assets/textures/fx/hits/hits-4/hits-4-3.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/fx/hits/hits-4/hits-4-1.png" type="Texture" id=12]
[ext_resource path="res://src/entities/player/states/IdleState.gd" type="Script" id=13]
[ext_resource path="res://src/entities/player/states/DeadState.gd" type="Script" id=14]
[ext_resource path="res://src/entities/player/states/JumpState.gd" type="Script" id=15]
[ext_resource path="res://src/entities/player/Valkyrie.gd" type="Script" id=16]
[ext_resource path="res://src/entities/player/states/FireState.gd" type="Script" id=17]
[ext_resource path="res://src/entities/player/states/PlaneState.gd" type="Script" id=18]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Body:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "die"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35, 40 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 13, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -8 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fire"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 17, 17, 17 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -5 ), Vector2( -4, -6 ), Vector2( -4, -5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -7 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "plane"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=13]
resource_name = "robot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 7, 6, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -5 ), Vector2( -4, -6 ), Vector2( -4, -7 ), Vector2( -4, -6 ), Vector2( -4, -5 ), Vector2( -4, -6 ), Vector2( -4, -7 ), Vector2( -4, -6 ) ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 28.0

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FX:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="Animation" id=10]
resource_name = "fire"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("FX:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), null ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fire"
} ]
}

[node name="Valkyrie" type="KinematicBody2D"]
position = Vector2( 201, 358 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 16 )
ACCELERATION = 30.0
H_SPEED_LIMIT = 200.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 10 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Walk"), NodePath("Jump"), NodePath("Dead"), NodePath("Fire"), NodePath("Plane") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 13 )
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
state_id = "walk"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 15 )
state_id = "jump"

[node name="Fire" type="Node" parent="StateMachine"]
script = ExtResource( 17 )
state_id = "fire"

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
state_id = "dead"

[node name="Plane" type="Node" parent="StateMachine"]
script = ExtResource( 18 )
state_id = "plane"

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 8 )
anims/fall = SubResource( 7 )
anims/fire = SubResource( 12 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/plane = SubResource( 11 )
anims/robot = SubResource( 13 )
anims/walk = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 28 )
shape = SubResource( 1 )

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 0, 30 )
cast_to = Vector2( 0, 1 )

[node name="RayCast2D2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -3, 31 )
cast_to = Vector2( 0, 1 )

[node name="RayCast2D3" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 3, 30 )
cast_to = Vector2( 0, 1 )

[node name="BodyPivot" type="Node2D" parent="."]
position = Vector2( -1, 1 )

[node name="Body" type="Sprite" parent="BodyPivot"]
position = Vector2( 0, 27 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
hframes = 5
vframes = 6
frame = 9

[node name="WeaponPivot" type="Node2D" parent="BodyPivot"]
position = Vector2( -4, -5 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="BodyPivot/WeaponPivot"]
remote_path = NodePath("../../../WeaponContainer")
update_rotation = false
update_scale = false

[node name="WeaponContainer" type="Node2D" parent="."]
position = Vector2( -5, -5 )

[node name="Weapon" type="Node2D" parent="WeaponContainer"]
unique_name_in_owner = true
rotation = -1.5708
scale = Vector2( 4, 2 )
script = ExtResource( 7 )
projectile_scene = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="WeaponContainer/Weapon"]
visible = false
position = Vector2( -8.53737e-07, 9.76561 )
rotation = 3.14159
scale = Vector2( 1, 2.6276 )
texture = ExtResource( 2 )

[node name="WeaponTip" type="Position2D" parent="WeaponContainer/Weapon"]
position = Vector2( 1.49996, 27.5 )

[node name="FXAnim" type="AnimationPlayer" parent="WeaponContainer/Weapon"]
anims/RESET = SubResource( 9 )
anims/fire = SubResource( 10 )

[node name="FX" type="Sprite" parent="WeaponContainer/Weapon"]
position = Vector2( 0.249969, 25 )
scale = Vector2( 0.5, 0.5 )

[connection signal="healed" from="." to="StateMachine" method="notify_healed"]
[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine" method="_on_animation_finished"]
